# backend2

./: pyproject.toml  vercel.json
backend/: index.py  main.py  requirements.txt  vercel.json
database/: chunk1_tables.sql  chunk2_indexes.sql  chunk3_seed.sql  schema.sql  schema_fixed.sql
frontend/: app.js  config.js  index.html  vercel.json
