[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feldor-health"
version = "1.0.0"
description = "AI-assisted cancer detection platform"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",

    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",

    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",

    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    "numpy==1.24.3",
    "opencv-python-headless==4.8.1.78",
    "Pillow==10.1.0",
    "pydicom==2.4.3",
    "python-dotenv==1.0.0",

    "torch==2.12.1",
    "torchvision==0.23.1",
]

[tool.vercel]
entrypoint = "backend.main:app"